<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crash_message_textview"
        android:text="@string/application_crash_message"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crash_email_checkbox"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/checkbox_text"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/crash_message_textview"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok_button"
        android:text="@string/button_crash_ok"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/crash_email_checkbox"
        android:layout_centerHorizontal="true" />

</RelativeLayout>